# cpp-skeleton

./: .clang-format  .ctags  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  clean.sh  configure  test.sh
build_tests/: normal.sh  pylintrc  test.py
build_tests/tests/: bug_21_clang_analyzer.txt  internal_lib_test.txt  simple_cmake.txt  touch_and_compile.txt
cmake/: CMakeLists_lib.pattern  CMakeLists_test.pattern  CodeCoverage.cmake  CppCompilationFlags.cmake  CppSkeleton.cmake  CppToolchain.cmake  Makefile.pattern  base.mk  ycm_extra_conf.py
cmake/utils/: clang-tidy-diff.py  pre-commit  run-clang-tidy.py
src/: CMakeLists.txt  Makefile  main.cpp
src/exe1/: CMakeLists.txt  Makefile  main.cpp
src/lib1/: CMakeLists.txt  Makefile  main.cpp
src/lib1/include/lib1/: main.hpp
src/lib1/include/lib1/sub1/: public_sub1.hpp
src/lib1/include/lib1/sub2/: public_sub2.hpp
src/lib1/sub1/: private_sub1.hpp  sub1.cpp
src/lib1/sub2/: private_sub2.hpp  sub2.cpp
src/lib1/test/: CMakeLists.txt  Makefile  test.cpp  test.hpp  test2.cpp
src/lib2/: CMakeLists.txt  Makefile  main.cpp
src/lib2/include/lib1/: main.hpp
src/lib2/include/lib2/: main.hpp
src/lib2/test/: CMakeLists.txt  Makefile  test.cpp
src/lib3/: CMakeLists.txt  Makefile  main.cpp  main.hpp
src/lib3/test/: test.cpp
src/test/: CMakeLists.txt
test/: test.cpp
